--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,5 +1,9 @@
 /* max photography - landscape.css */
 
+body {
+	background: rgba(0, 0, 0, 0.05);
+}
+
 /* header */
 #header {
 	position: relative;
@@ -13,10 +17,9 @@
 
 #header > #logo {
 	height: 70px;
-	text-align: right;
+	text-align: center;
 	font-size: 42pt;
-	margin-right: 100px;
-	padding-left: 30px;
+	width: 100%;
 	text-shadow: 2px 2px 4px #999;
 }
 
@@ -91,19 +94,15 @@
 #menu > ul > li {
 	margin: 0;
 	cursor: pointer;
-	padding-top: 12px;
-	margin-bottom: 20px;
-	border-bottom: 1px solid #000;
 	text-transform: capitalize;
 	overflow-x: hidden;
-	line-height: 20px;
 }
 
 #menu > ul > li > a {
 	color: #000;
 	text-decoration: none;
 	padding-right: 100px;
-	padding-top: 14px;
+	line-height: 20px;
 }
 
 #menu > ul > li > a:active
@@ -122,7 +121,6 @@
 #content {
 	display: inline-block;
 	float: left;
-	border-bottom: 1px solid #000;
 	min-height: 500px;
 	height: 80%;
 	width: 80%;
@@ -131,35 +129,13 @@
 	color: #fff;
 }
 
-#content:hover {
-	color: #000;
-	background: #ffffff;
-	background: -moz-linear-gradient(top,  #ffffff 0%, #000000 80%, #ffffff 100%);
-	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#ffffff), color-stop(80%,#000000), color-stop(100%,#ffffff));
-	background: -webkit-linear-gradient(top,  #ffffff 0%,#000000 80%,#ffffff 100%);
-	background: -o-linear-gradient(top,  #ffffff 0%,#000000 80%,#ffffff 100%);
-	background: -ms-linear-gradient(top,  #ffffff 0%,#000000 80%,#ffffff 100%);
-	background: linear-gradient(to bottom,  #ffffff 0%,#000000 80%,#ffffff 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffffff',GradientType=0 );
-}
-
-#content > #title {
-	background-color: #fff;
-	color: #000;
-	padding-left: 30px;
-	font-size: 21pt;
-	border-bottom: 1px solid #000;
-	text-transform: capitalize;
-}
-
 #content > #gallery {
 	cursor: pointer;
 	overflow-y: hidden;
 	overflow-x: scroll;
 	width: auto;
 	margin-top: 23px;
-	height: 420px;
-	background-color: #000;
+	height: 490px;
 	white-space: nowrap;
 }
 
@@ -167,11 +143,11 @@
 	overflow-y: hidden;
 	display: inline-block;
   white-space: normal;
-	background: #000 no-repeat center;
-	width: 400px;
-	height: 420px;
-	/*background-size: 400px auto;*/
-	margin:-12px 10px 0 10px !important;
+	background: no-repeat center;
+	width: 650px;
+	height: 490px;
+	background-size: 650px auto; /* to com*/
+	margin:-12px 0 0 7px !important;
 }
 
 #content > #gallery > #load {
