--- a/css/landscape.css
+++ b/css/landscape.css
@@ -1,8 +1,8 @@
 /* max photography - landscape.css */
 
-@font-face {  
-  font-family: kin668;  
-  src: url(kin668.ttf) format("truetype");  
+@font-face {
+  font-family: 'kin668';
+  src: url('kin668.ttf');
 }
 
 body {
@@ -25,7 +25,8 @@ body {
 	font-size: 42pt;
 	width: 525px;
 	text-shadow: 2px 2px 4px #999;
-	font-family: kin668;
+	font-family: 'kin668';
+15px;
 }
 
 #header > #lang {
@@ -179,15 +180,6 @@ body {
 	display: block;
 }
 
-#content > #gallery > #load {
-	display: inline-block;
-  white-space: normal;
-	width: 30px;
-	height: 430px;
-	border: 1px solid #eeeeee;
-	margin:0;
-}
-
 #content > #gallery_bar {
 	position: absolute;
 	right: 0;	
@@ -203,8 +195,6 @@ body {
 	margin-right: 60px;
 	color: #000;
 }
-
-
 
 #logbox {
 	position: absolute;
@@ -248,7 +238,106 @@ body {
 	display: block !important;
 }
 
+.add_inline {
+	display: inline-block !important;
+}
+
 .bt_upload {
-	display: block;
+	display: inline-block;
 	color: #000;
+}
+
+#content > #gallery > #load {
+	display: none;
+  white-space: normal;
+	width: 100px;
+	height: 430px;
+	border: 1px solid #eeeeee;
+	margin:0;
+}
+
+#loader {
+  position: relative;
+  width: 100px;
+  height: 100px;
+  -moz-border-radius: 100px;
+  -webkit-border-radius: 100px;
+  -moz-transform: scale(0.5);
+  -webkit-transform: scale(0.5);
+  -webkit-animation-name: rotateThis;
+  -webkit-animation-duration: 2s;
+  -webkit-animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+	margin-top: 120px;
+}
+
+#loader > div {
+  width: 20px;
+  height: 20px;
+  background: #000;
+  -moz-border-radius: 40px;
+  -webkit-border-radius: 40px;
+  position: absolute;
+  left: 40px;
+  top: 40px;
+}
+
+#loader >:nth-child(1) {
+  -moz-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+  -webkit-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	opacity: 0.12;
+}
+
+#loader >:nth-child(2) {
+  -moz-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+  -webkit-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	opacity: 0.25;
+}
+
+#loader >:nth-child(3) {
+  -moz-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+  -webkit-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+ 	opacity: 0.37;
+}
+
+#loader >:nth-child(4) {
+  -moz-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+  -webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	opacity: 0.50;
+}
+
+#loader >:nth-child(5) {
+  -moz-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+  -webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	opacity: 0.62;
+}
+
+#loader >:nth-child(6) {
+  -moz-transform: rotate(225deg) translate(0, -40px) scale(1);
+  -webkit-transform: rotate(225deg) translate(0, -40px) scale(1);
+	opacity:0.75;
+}
+
+#loader >:nth-child(7) {
+  -moz-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+  -webkit-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	opacity: 0.87;
+}
+
+#loader >:nth-child(8) {
+  -moz-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+  -webkit-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	opacity: 1;
+}
+
+#contact {
+	position: absolute;
+	top: 25px;
+	right: 83px;
+}
+
+#contact > a {
+	color: #000;
+	text-decoration: none;
+	font-size: 21pt;
 }
