--- a/css/landscape.css
+++ b/css/landscape.css
@@ -2,8 +2,8 @@
 
 @font-face {
 	font-family: 'king_regular';
-	src: url('king_regular.eot');
-	src: local('☺'), url('king_regular.woff') format('woff'), url('king_regular.ttf') format('truetype'), url('king_regular.svg') format('svg');
+	src: url('fonts/king_regular.eot');
+	src: local('☺'), url('fonts/king_regular.woff') format('woff'), url('fonts/king_regular.ttf') format('truetype'), url('fonts/king_regular.svg') format('svg');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -179,16 +179,19 @@ body {
 #content > #gallery > .img {
 	overflow-y: hidden;
 	display: inline-block;
-  white-space: normal;
+	white-space: normal;
 	background: no-repeat center;
 	height: 540px;
 	background-size: auto 540px;
-	margin: -12px 0 10px 7px !important;
+	margin: -12px 7px 10px 0 !important;
+}
+
+#content > #gallery >:first-child {
+	margin-left: 7px !important;
 }
 
 #content > #gallery > .img > span {
 	border: 5px dashed black;
-	width: 640px;
 	height: 95%;
 	margin-top: 12px;
 	position: relative;
@@ -202,7 +205,7 @@ body {
 
 #content > #gallery_bar > * {
 	display: inline-block;
-  white-space: normal;
+	white-space: normal;
 	margin-right: 20px;
 }
 
@@ -212,15 +215,15 @@ body {
 }
 
 #content > #gallery::-webkit-scrollbar {
-    -webkit-appearance: none;
-    width: 11px;
-    height: 11px;
+	-webkit-appearance: none;
+	width: 11px;
+	height: 11px;
 }
 
 #content > #gallery::-webkit-scrollbar-thumb {
-    border-radius: 8px;
-    border: 2px solid white; /* should match background, can't be transparent */
-    background-color: rgba(0, 0, 0, .5);
+	border-radius: 8px;
+	border: 2px solid white; /* should match background, can't be transparent */
+	background-color: rgba(0, 0, 0, .5);
 }
 
 /* logbox */
@@ -241,7 +244,7 @@ body {
 }
 
 #logbox > fieldset > legend {
-		text-align: left;
+	text-align: left;
 }
 
 #logbox > fieldset >:nth-child(3) {
@@ -287,84 +290,138 @@ body {
 
 #content > #gallery > #load {
 	display: none;
-  white-space: normal;
-	width: 200px;
+	white-space: normal;
+	width: 100px;
 	height: 430px;
 	border: 1px solid #eeeeee;
-	margin:0;
+	margin: 0;
 }
 
 #loader {
-  position: relative;
-  width: 100px;
-  height: 100px;
-  -moz-border-radius: 100px;
-  -webkit-border-radius: 100px;
-  -moz-transform: scale(0.5);
-  -webkit-transform: scale(0.5);
-  -webkit-animation-name: rotateThis;
-  -webkit-animation-duration: 2s;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
+	position: relative;
+	width: 100px;
+	height: 100px;
 	margin-top: 120px;
+
+	-webkit-border-radius: 100px;
+	-webkit-transform: scale(0.5);
+	-webkit-animation-name: rotateThis;
+	-webkit-animation-duration: 2s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+
+	-moz-border-radius: 100px;
+	-moz-transform: scale(0.5);
+	-moz-animation-name: rotateThis;
+	-moz-animation-duration: 2s;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-timing-function: linear;
+
+	-o-border-radius: 100px;
+	-o-transform: scale(0.5);
+	-o-animation-name: rotateThis;
+	-o-animation-duration: 2s;
+	-o-animation-iteration-count: infinite;
+	-o-animation-timing-function: linear;
+
+	-ms-border-radius: 100px;
+	-ms-transform: scale(0.5);
+	-ms-animation-name: rotateThis;
+	-ms-animation-duration: 2s;
+	-ms-animation-iteration-count: infinite;
+	-ms-animation-timing-function: linear;
+
+	border-radius: 100px;
+	transform: scale(0.5);
+	animation-name: rotateThis;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
 }
 
 #loader > div {
-  width: 20px;
-  height: 20px;
-  background: #000;
-  -moz-border-radius: 40px;
-  -webkit-border-radius: 40px;
-  position: absolute;
-  left: 40px;
-  top: 40px;
+	width: 20px;
+	height: 20px;
+	background: #000;
+	-moz-border-radius: 40px;
+	-webkit-border-radius: 40px;
+	-o-border-radius: 40px;
+	-ms-border-radius: 40px;
+	border-radius: 40px;
+	position: absolute;
+	left: 40px;
+	top: 40px;
 }
 
 #loader >:nth-child(1) {
-  -moz-transform: rotate(0deg) translate(0, -40px) scale(0.1);
-  -webkit-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-moz-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-webkit-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-o-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-ms-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	transform: rotate(0deg) translate(0, -40px) scale(0.1);
 	opacity: 0.12;
 }
 
 #loader >:nth-child(2) {
-  -moz-transform: rotate(45deg) translate(0, -40px) scale(0.2);
-  -webkit-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-moz-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-webkit-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-o-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-ms-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	transform: rotate(45deg) translate(0, -40px) scale(0.2);
 	opacity: 0.25;
 }
 
 #loader >:nth-child(3) {
-  -moz-transform: rotate(90deg) translate(0, -40px) scale(0.4);
-  -webkit-transform: rotate(90deg) translate(0, -40px) scale(0.4);
- 	opacity: 0.37;
+	-moz-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-webkit-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-o-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-ms-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	opacity: 0.37;
 }
 
 #loader >:nth-child(4) {
-  -moz-transform: rotate(135deg) translate(0, -40px) scale(0.6);
-  -webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-moz-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-o-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-ms-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	transform: rotate(135deg) translate(0, -40px) scale(0.6);
 	opacity: 0.50;
 }
 
 #loader >:nth-child(5) {
-  -moz-transform: rotate(180deg) translate(0, -40px) scale(0.8);
-  -webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-moz-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-o-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-ms-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	transform: rotate(180deg) translate(0, -40px) scale(0.8);
 	opacity: 0.62;
 }
 
 #loader >:nth-child(6) {
-  -moz-transform: rotate(225deg) translate(0, -40px) scale(1);
-  -webkit-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-moz-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-webkit-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-o-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-ms-transform: rotate(225deg) translate(0, -40px) scale(1);
+	transform: rotate(225deg) translate(0, -40px) scale(1);
 	opacity:0.75;
 }
 
 #loader >:nth-child(7) {
-  -moz-transform: rotate(270deg) translate(0, -40px) scale(1.2);
-  -webkit-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-moz-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-webkit-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-ms-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-o-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-transform: rotate(270deg) translate(0, -40px) scale(1.2);
 	opacity: 0.87;
 }
 
 #loader >:nth-child(8) {
-  -moz-transform: rotate(315deg) translate(0, -40px) scale(1.4);
-  -webkit-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-moz-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-webkit-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-ms-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-o-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	transform: rotate(315deg) translate(0, -40px) scale(1.4);
 	opacity: 1;
 }
 
