--- a/css/portrait.css
+++ b/css/portrait.css
@@ -1,49 +1,426 @@
 /* MaxPhotographer - portrait.css */
 
+@font-face {
+	font-family: 'king_regular';
+	src: url('fonts/king_regular.eot');
+	src: local('☺'), url('fonts/king_regular.woff') format('woff'), url('fonts/king_regular.ttf') format('truetype'), url('fonts/king_regular.svg') format('svg');
+	font-weight: normal;
+	font-style: normal;
+}
+
+body {
+	background: rgba(0, 0, 0, 0.05);
+}
 
 /* header */
 #header {
+	position: relative;
+	overflow: hidden;
+	min-width: 0;
+	height: 50px;
+	margin-bottom: 7px;
+}
 
+#header > * {
+	display: inline-block;
 }
 
 #header > #logo {
-
-}
-
-#header > #lang {
-
+	height: 28px;
+	font-size: 15pt;
+	text-shadow: 2px 2px 4px #999;
+	font-family: 'king_regular';
+	padding: 0 23px;
+	text-align: center;
+	display: block;
+	cursor: default;
+	-webkit-touch-callout: none;
+	-webkit-user-select: none;
+	-moz-user-select: none;
+	-o-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
 }
 
 #header > #admin {
+	position: absolute;
+	right: 70px;
+	padding: 8px 10px;
+	cursor: pointer;
+	border-bottom: 1px solid #000;
+}
 
+#header > #admin:hover {
+	background-color: #eeeeee;
+}
+
+#header > #admin > a {
+	color: #000;
+	text-decoration: none;
+}
+
+#container {
+	min-width: 0;
 }
 
 /* menu */
 #menu {
-
+	display: block;
+	/* border-right: 1px solid #000; */
+	margin-top: 0;
+	height: auto;
+	width: auto;
+	float: none;
 }
 
-#menu > b {
-
+#menu > input {
+	width: 100px;
+	margin-right: 10px;
 }
 
 #menu > ul {
-
+	margin: 5px;
+	padding: 0;
+	list-style: none;
+	height: 20px;
 }
 
 #menu > ul > li {
-
+	margin: 0;
+	position: relative;
+	cursor: pointer;
+	text-transform: capitalize;
+	overflow-x: hidden;
+	display: inline-block;
 }
+
+#menu > ul > li > a {
+	color: #000;
+	text-decoration: none;
+	padding-right: 50px;
+	line-height: 20px;
+	height:;
+}
+
+#menu > ul > li > a:active
+{
+	outline: none;
+}
+
+#menu > ul > li:hover {
+	list-style-type: square;
+	padding-left: 0;
+	font-size: 13pt;
+	background-color: #eeeeee;
+}
+
+#menu > ul > li > button {
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 16px;
+	height: 17px;
+	line-height: 10px;
+	padding: 0;
+}
+
+#menu > button:last-child {
+	display: block;
+	width: 80%;
+	margin: auto;
+	margin-top: 40px;
+}
+
+#menu > button:nth-last-child(2) {
+	margin-left: 30px;
+} 
 
 /* content */
 #content {
-
+	display: block;
+	min-height: 0;
+	height: auto;
+	width: auto;
+	margin-left: 0;
+	position: relative;
+	float: none;
 }
 
-#content > #title {
-
+#content.shadow {
+	box-shadow: 0px 0px 30px black;
 }
 
 #content > #gallery {
+	cursor: pointer;
+	overflow-y: hidden;
+	overflow-x: scroll;
+	width: auto;
+	margin-top: 10px;
+	white-space: nowrap;
+	min-height: 0;
+}
 
+#content > #gallery > .img {
+	overflow-y: auto;
+	display: block;
+	white-space: normal;
+	background: no-repeat center;
+	height: auto;
+	min-width: 380px;
+	background-size: 380px auto;
+	margin: 3px 3px 3px 3px !important;
+}
+
+#content > #gallery >:first-child {
+	margin-left: 0;
+}
+
+#content > #gallery > .img > span {
+	border: 5px dashed black;
+	height: 95%;
+	margin-top: 12px;
+	position: relative;
+	display: block;
+}
+
+#content > #gallery_bar {
+	position: absolute;
+	right: 0;	
+}
+
+#content > #gallery_bar > * {
+	display: inline-block;
+	white-space: normal;
+	margin-right: 20px;
+}
+
+#content > #gallery_bar >:first-child {
+	margin-right: 60px;
+	color: #000;
+}
+
+#content > #gallery::-webkit-scrollbar {
+	-webkit-appearance: none;
+	width: 11px;
+	height: 11px;
+}
+
+#content > #gallery::-webkit-scrollbar-thumb {
+	border-radius: 8px;
+	border: 2px solid white; /* should match background, can't be transparent */
+	background-color: rgba(0, 0, 0, .5);
+}
+
+/* logbox */
+#logbox {
+	position: absolute;
+	width: 200px;
+	height: 100px;
+	top: 40%;
+	left: 40%;
+	text-align: center;
+	background: rgba(0,0,0,0.4);
+	color: #C9C9C9;
+	padding-bottom: 20px;
+}
+
+#logbox > fieldset {
+	border: 1px dashed #000;
+}
+
+#logbox > fieldset > legend {
+	text-align: left;
+}
+
+#logbox > fieldset >:nth-child(3) {
+	margin-top: 10px;
+}
+
+#logbox > fieldset >:last-child {
+	margin-top: 10px;
+	background: none;
+	color: #C9C9C9;
+}
+
+#logbox > button {
+	position: absolute;
+	top: 0;
+	color: #C9C9C9;
+	right: 0;
+	background: none;
+}
+
+.remove {
+	display: none !important;
+}
+
+.add {
+	display: block !important;
+}
+
+.add_inline {
+	display: inline-block !important;
+}
+
+.bt_upload, .bt_up, .bt_down {
+	display: inline-block;
+	color: #000;
+}
+
+.bt_up, .bt_down {
+	display: none;
+	width: 66px;
+	margin-left: 10px;
+}
+
+#content > #gallery > #load {
+	display: none;
+	white-space: normal;
+	width: auto;
+	height: 57px;
+	border: 1px solid #eeeeee;
+	margin: 0;
+}
+
+#loader {
+	position: relative;
+	width: auto;
+	height: auto;
+	margin-top: 4px;
+
+	margin-left: 80px;
+	-webkit-border-radius: 100px;
+	-webkit-transform: scale(0.5);
+	-webkit-animation-name: rotateThis;
+	-webkit-animation-duration: 2s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: linear;
+
+	-moz-border-radius: 100px;
+	-moz-transform: scale(0.5);
+	-moz-animation-name: rotateThis;
+	-moz-animation-duration: 2s;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-timing-function: linear;
+
+	-o-border-radius: 100px;
+	-o-transform: scale(0.5);
+	-o-animation-name: rotateThis;
+	-o-animation-duration: 2s;
+	-o-animation-iteration-count: infinite;
+	-o-animation-timing-function: linear;
+
+	-ms-border-radius: 100px;
+	-ms-transform: scale(0.5);
+	-ms-animation-name: rotateThis;
+	-ms-animation-duration: 2s;
+	-ms-animation-iteration-count: infinite;
+	-ms-animation-timing-function: linear;
+
+	border-radius: 100px;
+	transform: scale(0.5);
+	animation-name: rotateThis;
+	animation-duration: 2s;
+	animation-iteration-count: infinite;
+	animation-timing-function: linear;
+}
+
+#loader > div {
+	width: 20px;
+	height: 20px;
+	background: #000;
+	-moz-border-radius: 40px;
+	-webkit-border-radius: 40px;
+	-o-border-radius: 40px;
+	-ms-border-radius: 40px;
+	border-radius: 40px;
+	position: absolute;
+	left: 40px;
+	top: 40px;
+}
+
+#loader >:nth-child(1) {
+	-moz-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-webkit-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-o-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	-ms-transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	transform: rotate(0deg) translate(0, -40px) scale(0.1);
+	opacity: 0.12;
+}
+
+#loader >:nth-child(2) {
+	-moz-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-webkit-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-o-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	-ms-transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	transform: rotate(45deg) translate(0, -40px) scale(0.2);
+	opacity: 0.25;
+}
+
+#loader >:nth-child(3) {
+	-moz-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-webkit-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-o-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	-ms-transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	transform: rotate(90deg) translate(0, -40px) scale(0.4);
+	opacity: 0.37;
+}
+
+#loader >:nth-child(4) {
+	-moz-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-webkit-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-o-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	-ms-transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	transform: rotate(135deg) translate(0, -40px) scale(0.6);
+	opacity: 0.50;
+}
+
+#loader >:nth-child(5) {
+	-moz-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-webkit-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-o-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	-ms-transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	transform: rotate(180deg) translate(0, -40px) scale(0.8);
+	opacity: 0.62;
+}
+
+#loader >:nth-child(6) {
+	-moz-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-webkit-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-o-transform: rotate(225deg) translate(0, -40px) scale(1);
+	-ms-transform: rotate(225deg) translate(0, -40px) scale(1);
+	transform: rotate(225deg) translate(0, -40px) scale(1);
+	opacity:0.75;
+}
+
+#loader >:nth-child(7) {
+	-moz-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-webkit-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-ms-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-o-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	-transform: rotate(270deg) translate(0, -40px) scale(1.2);
+	opacity: 0.87;
+}
+
+#loader >:nth-child(8) {
+	-moz-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-webkit-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-ms-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	-o-transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	transform: rotate(315deg) translate(0, -40px) scale(1.4);
+	opacity: 1;
+}
+
+#contact {
+	position: initial;
+	top: 31px;
+	right: 49px;
+	display: block;
+	text-align: center;
+}
+
+#contact > a {
+	color: #000;
+	text-decoration: none;
+	font-size: 12pt;
 }
