--- a/css/landscape.css
+++ b/css/landscape.css
@@ -134,7 +134,7 @@ body {
 	overflow-y: hidden;
 	overflow-x: scroll;
 	width: auto;
-	margin-top: 23px;
+	margin-top: 13px;
 	white-space: nowrap;
 	min-height: 550px;
 }
@@ -143,11 +143,9 @@ body {
 	overflow-y: hidden;
 	display: inline-block;
 	white-space: normal;
-	background: no-repeat center;
-	height: 540px;
-	background-size: auto 540px;
-	margin: 0 7px 7px 0 !important;
+	margin-right: 7px;
 	position: relative;
+	vertical-align: middle;
 }
 
 #content > #gallery >:first-child {
@@ -265,8 +263,8 @@ body {
 	white-space: normal;
 	width: 100px;
 	height: 540px;
-	border: 1px solid #eeeeee;
 	margin: 0;
+	vertical-align: middle;
 }
 
 #content > #gallery > #load > div {
