--- a/css/landscape.css
+++ b/css/landscape.css
@@ -9,7 +9,7 @@
 }
 
 body {
-	background: rgba(0, 0, 0, 0.05);
+	background: url('kindajean.png') rgba(0, 0, 0, 0.05); /* kinda jeans pattern from http://subtlepatterns.com */
 }
 
 /* header */
